crates/invoicekit-ffi/include/invoicekit.h

#ifndef INVOICEKIT_H
#define INVOICEKIT_H

#pragma once

/* Generated by cbindgen. Do not edit manually. */

#include <stdarg.h>
#include <stdbool.h>
#include <stddef.h>
#include <stdint.h>
#include <stdlib.h>

/**
 * Result status code returned by the C ABI.
 */
enum InvoiceKitStatusCode
#ifdef __cplusplus
  : uint32_t
#endif // __cplusplus
 {
  /**
   * The engine operation completed successfully.
   */
  Ok = 0,
  /**
   * The engine returned a canonical JSON error response.
   */
  Error = 1,
  /**
   * The caller passed a null result handle.
   */
  InvalidHandle = 2,
};
#ifndef __cplusplus
typedef uint32_t InvoiceKitStatusCode;
#endif // __cplusplus

/**
 * Opaque handle that owns engine response bytes.
 *
 * The struct is intentionally opaque to C callers. Use
 * [`invoicekit_engine_result_status`], [`invoicekit_engine_result_bytes`],
 * [`invoicekit_engine_result_len`], and [`invoicekit_engine_result_free`]
 * instead of reading fields directly.
 */
typedef struct InvoiceKitEngineResult InvoiceKitEngineResult;

#ifdef __cplusplus
extern "C" {
#endif // __cplusplus

/**
 * Return the engine ABI version implemented by this library.
 *
 * # Examples
 *
 * ```
 * assert_eq!(invoicekit_ffi::invoicekit_engine_abi_version(), 1);
 * ```
 */
uint32_t invoicekit_engine_abi_version(void);

/**
 * Process an Engine ABI JSON request and return an owned result handle.
 *
 * The returned pointer must be released exactly once with
 * [`invoicekit_engine_result_free`]. A null `request_ptr` is valid only when
 * `request_len` is `0`; otherwise the function returns an error handle.
 *
 * # Safety
 *
 * When `request_len` is greater than zero, `request_ptr` must point to
 * `request_len` initialized bytes that remain valid for the duration of this
 * call.
 *
 * # Examples
 *
 * ```
 * let request = br#"{"abi_version":1,"operation":"unknown","payload":{}}"#;
 * let result = unsafe {
 *     invoicekit_ffi::invoicekit_engine_process_json(request.as_ptr(), request.len())
 * };
 * assert!(!result.is_null());
 * unsafe { invoicekit_ffi::invoicekit_engine_result_free(result) };
 * ```
 */
struct InvoiceKitEngineResult *invoicekit_engine_process_json(const unsigned char *request_ptr,
                                                              size_t request_len);

/**
 * Return the status code carried by an engine result handle.
 *
 * # Safety
 *
 * `result` must be null or a live pointer previously returned by
 * [`invoicekit_engine_process_json`].
 *
 * # Examples
 *
 * ```
 * let request = br#"{"abi_version":1,"operation":"unknown","payload":{}}"#;
 * let result = unsafe {
 *     invoicekit_ffi::invoicekit_engine_process_json(request.as_ptr(), request.len())
 * };
 * let status = unsafe { invoicekit_ffi::invoicekit_engine_result_status(result) };
 * assert_eq!(status, invoicekit_ffi::InvoiceKitStatusCode::Error as u32);
 * unsafe { invoicekit_ffi::invoicekit_engine_result_free(result) };
 * ```
 */
uint32_t invoicekit_engine_result_status(const struct InvoiceKitEngineResult *result);

/**
 * Return a pointer to response bytes owned by an engine result handle.
 *
 * The pointer remains valid until [`invoicekit_engine_result_free`] is called.
 * It may be null when `result` is null or when the response length is zero.
 *
 * # Safety
 *
 * `result` must be null or a live pointer previously returned by
 * [`invoicekit_engine_process_json`].
 *
 * # Examples
 *
 * ```
 * let request = br#"{"abi_version":1,"operation":"unknown","payload":{}}"#;
 * let result = unsafe {
 *     invoicekit_ffi::invoicekit_engine_process_json(request.as_ptr(), request.len())
 * };
 * let len = unsafe { invoicekit_ffi::invoicekit_engine_result_len(result) };
 * let ptr = unsafe { invoicekit_ffi::invoicekit_engine_result_bytes(result) };
 * assert!(len > 0);
 * assert!(!ptr.is_null());
 * unsafe { invoicekit_ffi::invoicekit_engine_result_free(result) };
 * ```
 */
const unsigned char *invoicekit_engine_result_bytes(const struct InvoiceKitEngineResult *result);

/**
 * Return the response byte length carried by an engine result handle.
 *
 * # Safety
 *
 * `result` must be null or a live pointer previously returned by
 * [`invoicekit_engine_process_json`].
 *
 * # Examples
 *
 * ```
 * let request = br#"{"abi_version":1,"operation":"unknown","payload":{}}"#;
 * let result = unsafe {
 *     invoicekit_ffi::invoicekit_engine_process_json(request.as_ptr(), request.len())
 * };
 * assert!(unsafe { invoicekit_ffi::invoicekit_engine_result_len(result) } > 0);
 * unsafe { invoicekit_ffi::invoicekit_engine_result_free(result) };
 * ```
 */
size_t invoicekit_engine_result_len(const struct InvoiceKitEngineResult *result);

/**
 * Release an engine result handle returned by [`invoicekit_engine_process_json`].
 *
 * Passing null is a no-op.
 *
 * # Safety
 *
 * `result` must be null or a pointer returned by
 * [`invoicekit_engine_process_json`] that has not already been freed.
 *
 * # Examples
 *
 * ```
 * let request = br#"{"abi_version":1,"operation":"unknown","payload":{}}"#;
 * let result = unsafe {
 *     invoicekit_ffi::invoicekit_engine_process_json(request.as_ptr(), request.len())
 * };
 * unsafe { invoicekit_ffi::invoicekit_engine_result_free(result) };
 * ```
 */
void invoicekit_engine_result_free(struct InvoiceKitEngineResult *result);

#ifdef __cplusplus
}  // extern "C"
#endif  // __cplusplus

#endif  /* INVOICEKIT_H */